fix: change tasks display on small devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -253,9 +253,18 @@ textarea {
 
 .new-task {
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
   background-color: var(--color-neutral-50);
   padding: 16px;
+  width: 100%;
+}
+
+.new-task__name {
+  margin-right: 16px;
+  padding: 8px;
+  border: none;
+  border-radius: 4px;
   width: 100%;
 }
 
@@ -270,14 +279,6 @@ textarea {
   gap: 16px;
 }
 
-.new-task__name {
-  margin-right: 16px;
-  padding: 8px;
-  border: none;
-  border-radius: 4px;
-  width: 100%;
-}
-
 .projects-dropdown {
   display: flex;
   justify-content: center;
@@ -288,6 +289,7 @@ textarea {
   border-radius: 4px;
   cursor: pointer;
   gap: 8px;
+  margin-right: auto;
 }
 
 .tasks {
@@ -300,6 +302,7 @@ textarea {
 
 .task {
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
   align-items: center;
   position: relative;
@@ -352,8 +355,14 @@ textarea {
 
 .task__actions {
   display: flex;
+  width: 100%;
   align-items: center;
+  justify-content: space-between;
   gap: 8px;
+}
+
+.task__options {
+  margin-left: auto;
 }
 
 .task__project {
@@ -555,8 +564,12 @@ textarea {
 }
 
 @keyframes fadeBackground {
-  0% { background-color: var(--color-green-150); }
-  100% { background-color: var(--color-neutral-50); }
+  0% {
+    background-color: var(--color-green-150);
+  }
+  100% {
+    background-color: var(--color-neutral-50);
+  }
 }
 
 /* ======================================================================== */
@@ -610,5 +623,21 @@ textarea {
   nav ul li a {
     display: inline-block;
     width: 100%;
+  }
+
+  .new-task {
+    flex-direction: row;
+  }
+
+  .task {
+    flex-direction: row;
+  }
+
+  .task__actions {
+    width: initial;
+  }
+
+  .task__options {
+    margin-left: 0;
   }
 }
